Fix wrap style properties

--- a/res/css/_tree.css
+++ b/res/css/_tree.css
@@ -65,7 +65,7 @@ a.tree-node-label {
 
 .tree-node-primary-text {
   flex: 1;
-  word-break: break-word;
+  overflow-wrap: break-word;
 }
 
 .tree-node-secondary-text {
